<resources>
    <string name="app_name">My Store</string>
    <string name="users">Users</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="tickets">Tickets</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="add_category">Add Category</string>
    <string name="add_ticket">Add ticket</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="delete_ticket">Delete ticket</string>
    <string name="category">Category</string>
    <string name="creation_date">Creation Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="important">Important</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="required_field">Required Field</string>
    <string name="notickets">No tickets available</string>
    <string name="deleted">Deleted</string>
    <string name="yes">Yes</string>
    <string name="delete_ticket_dialog">Are you sure you want to delete this ticket?</string>
    <string name="users_title">Users</string>
    <string name="no_users_available">No users available</string>
    <string name="add_user">Add user </string>
    <string name="user_status">User status</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="personal_information">Personal Info</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birth_date">Birth Date</string>
    <string name="address_information">Address Info</string>
    <string name="address">Address</string>
    <string name="location_information">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="status_information">Status</string>
    <string name="user_active">Active User</string>
    <string name="save_user">Save User</string>
    <string name="select_this_location">Select Location</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_not_available_message">No location info for this user.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_dialog">Are you sure you want to delete this user?</string>
    <string name="edit_category">Update Category</string>
    <string name="product_deleted">Product Deleted</string>
    <string name="add_product">Add Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_dialog">Are you sure you want to delete this product?</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="select">Select</string>
    <string name="edit_product">Edit Product</string>
</resources>


