<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btnUsers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/btnCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        app:layout_constraintEnd_toEndOf="@+id/btnUsers"
        app:layout_constraintStart_toStartOf="@+id/btnUsers"
        app:layout_constraintTop_toBottomOf="@+id/btnUsers" />

    <Button
        android:id="@+id/btnProducts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/products"
        app:layout_constraintEnd_toEndOf="@+id/btnCategories"
        app:layout_constraintStart_toStartOf="@+id/btnCategories"
        app:layout_constraintTop_toBottomOf="@+id/btnCategories" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/orders"
        app:layout_constraintEnd_toEndOf="@+id/btnProducts"
        app:layout_constraintStart_toStartOf="@+id/btnProducts"
        app:layout_constraintTop_toBottomOf="@+id/btnProducts" />

</androidx.constraintlayout.widget.ConstraintLayout>